force-app/main/default/objects/Inquiry__c/Inquiry__c.object-meta.xml
<CustomObject>
    <description>고객의 문의 사항을 접수하고 관리하는 오브젝트입니다.</description>
    <label>고객 문의</label>
    <nameField>
        <label>문의 제목</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>고객 문의</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>