force-app/main/default/objects/Inquiry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>문의의 유형을 분류합니다.</description>
    <label>문의 유형</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>일반문의</fullName>
                <default>true</default>
                <label>일반문의</label>
            </value>
            <value>
                <fullName>불만</fullName>
            </value>
            <value>
                <fullName>환불</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>