force-app/main/default/objects/Inquiry__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>고객의 상세 문의 내용입니다.</description>
    <label>문의 내용</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>