force-app/main/default/objects/Inquiry__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>문의를 남긴 고객의 이름입니다.</description>
    <label>고객 이름</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>