force-app/main/default/objects/Inquiry__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>답변을 받을 고객의 이메일 주소입니다.</description>
    <label>고객 이메일</label>
    <required>true</required>
    <type>Email</type>
</CustomField>