force-app/main/default/objects/Inquiry__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>고객의 연락처 정보입니다.</description>
    <label>고객 연락처</label>
    <type>Phone</type>
</CustomField>