force-app/main/default/objects/Inquiry__c/fields/RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>해당 문의를 통해 자동 생성된 Case와의 연결 필드입니다.</description>
    <label>연결된 Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>고객 문의</relationshipLabel>
    <relationshipName>Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>