force-app/main/default/objects/Inquiry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>문의 처리 상태를 나타냅니다.</description>
    <label>상태</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>접수</fullName>
                <default>true</default>
                <label>접수</label>
            </value>
            <value>
                <fullName>처리중</fullName>
            </value>
            <value>
                <fullName>완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>